# lms

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0007_rename_tittle_course_title.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
